# synth-engine

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  clean-build.sh  example.c  oscillator.c  oscillator.h  seq.c  sequencer.c  synth.c  synth.h  synth.html  wavetable.c  wavetable.h
extras/: pan.c  seq.c  sine.c
ui/: package-lock.json  package.json
ui/public/: index.html  synth.js  synth.wasm  worklet.js
ui/src/: App.tsx
